--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://AdeebAbubacker.github.io/AdeebAbubacker.github.io",
+  "homepage": "http://Aseeb369.github.io/Adeeb",
   "name": "3dfolio",
   "private": true,
   "version": "0.0.0",
